Name of club changed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="navigation">
         <nav class="nav_flex container">
             <p class="logo">
-                <span style="--i:1">surbiton</span>
+                <span style="--i:1">kingston</span>
                 <span style="--i:2">boxing</span>
                 <span style="--i:3">club</span>
             </p>
@@ -39,9 +39,9 @@
                 <h2>
                     About Us
                 </h2>
-                <p class="about_text">Welcome to <span class="club_name">Surbiton Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
+                <p class="about_text">Welcome to <span class="club_name">kingston Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
                     and well-being through the art of boxing.
-                    Established in 2010, <span class="club_name">Surbiton Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
+                    Established in 2010, <span class="club_name">kingston Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
                     Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
                 </p>
     
@@ -66,11 +66,11 @@
             </p>
             <p class="small_text">
                 An annual club membership - costing £30 - is required from the 4th session onwards. 
-                Competitive boxers will require a membership to England Boxing along with Surbiton ABC annual membership
+                Competitive boxers will require a membership to England Boxing along with kingston ABC annual membership
             </p>
 
             <div class="follow_links">            
-                <a href="./classes.html" class="link">Check how we train <i class="fa-solid fa-arrow-right"></i></a>
+                <a href="./training.html" class="link">Check how we train <i class="fa-solid fa-arrow-right"></i></a>
             </div>
     </div>
         <img class="img_training" src="./images/sessions.jpg" alt="training">
@@ -97,15 +97,15 @@
 <div class="container footer">
         <h1 class="footer_header">come join us</h1>
             <div class="location" role="contentinfo">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2skingston%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             
                 <div class="location_details">
                     <div>
                         <h4>address</h4>
-                        <p>Surbiton Boxing Club,<br>
+                        <p>Kingston Boxing Club,<br>
                             Unit A BT Exchange,<br>
                             5 Ewell Road,<br>
-                            Surbiton, Surrey,<br>
+                            Kingston, Surrey,<br>
                             KT6 6AB</p>
                     </div>
                     <div>
