--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
-    <title>Surbiton Boxing Classes</title>
+    <title>Kingston Boxing Classes</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <header class="navigation">
             <nav class="nav_flex container">
                 <p class="logo">
-                    <span style="--i:1">surbiton</span>
+                    <span style="--i:1">kingston</span>
                     <span style="--i:2">boxing</span>
                     <span style="--i:3">club</span>
                 </p>
@@ -33,10 +33,10 @@
     <section>
         <div class="classes">
             <h2>Classes Schedule</h2>
-            <p class="classes_text">Here in <span class="club_name">surbiton boxing club</span> all boxers <span class="important_text">aged 10 and above</span> are welcomed. We have separated our classes based on
+            <p class="classes_text">Here in <span class="club_name">kingston boxing club</span> all boxers <span class="important_text">aged 10 and above</span> are welcomed. We have separated our classes based on
             ability &amp; age groups. In order to produce a high standard of competitive boxers, amateur boxing classes and recreational keep-fit <span class="important_text">classes
             are kept separate.</span></p>
-            <p class="new_joiners">New joiners should visit the club to register interest before starting any training at <span class="club_name">surbiton boxing
+            <p class="new_joiners">New joiners should visit the club to register interest before starting any training at <span class="club_name">kingston boxing
             club</span></p>
         </div>
         <div class="classes_table">
@@ -152,15 +152,15 @@
         <div class="container footer">
                 <h1 class="footer_header">come join us</h1>
                     <div class="location" role="contentinfo">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2skingston%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     
                         <div class="location_details">
                             <div>
                                 <h4>address</h4>
-                                <p>Surbiton Boxing Club,<br>
+                                <p>Kingston Boxing Club,<br>
                                     Unit A BT Exchange,<br>
                                     5 Ewell Road,<br>
-                                    Surbiton, Surrey,<br>
+                                    Kingston, Surrey,<br>
                                     KT6 6AB</p>
                             </div>
                             <div>
