--- a/training.html
+++ b/training.html
@@ -14,7 +14,7 @@
             <header class="navigation">
                 <nav class="nav_flex container">
                     <p class="logo">
-                        <span style="--i:1">surbiton</span>
+                        <span style="--i:1">Kingston</span>
                         <span style="--i:2">boxing</span>
                         <span style="--i:3">club</span>
                     </p>
@@ -45,15 +45,15 @@
     <div class="container footer">
         <h1 class="footer_header">come join us</h1>
             <div class="location" role="contentinfo">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sSurbiton%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9957.901648277917!2d-0.2985214!3d51.3943188!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48760bcead9e3f2f%3A0xa30fccbc9b4dee8e!2sKingston%20Boxing%20Club!5e0!3m2!1sen!2suk!4v1694641421431!5m2!1sen!2suk" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 
                 <div class="location_details">
                     <div>
                         <h4>address</h4>
-                            <p>Surbiton Boxing Club,<br>
+                            <p>Kingston Boxing Club,<br>
                                 Unit A BT Exchange,<br>
                                 5 Ewell Road,<br>
-                                Surbiton, Surrey,<br>
+                                Kingston, Surrey,<br>
                                 KT6 6AB</p>
                     </div>
                         <div>
