--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
                     <span style="--i:2">boxing</span>
                     <span style="--i:3">club</span>
                 </p>
-                <div class="nav_right_section">
+                <div>
                     <ul>
                         <li><a href="./index.html">Home</a></li>
                         <li><a href="./training.html">Training</a></li>
@@ -109,6 +109,6 @@
                             </div>
                         </div>
             </div>
-            </footer>
+        </footer>
 </body>
 </html>
