--- a/training.html
+++ b/training.html
@@ -10,25 +10,27 @@
     <title>Training with us</title>
 </head>
 <body>
-            <!-- navigation bar -->
-            <header class="navigation">
-                <nav class="nav_flex container">
-                    <p class="logo">
-                        <span style="--i:1">Kingston</span>
-                        <span style="--i:2">boxing</span>
-                        <span style="--i:3">club</span>
-                    </p>
-                    <div class="nav_right_section">
-                        <ul>
-                            <li><a href="./index.html">Home</a></li>
-                            <li><a href="training.html">Training</a></li>
-                            <li><a href="./classes.html">Classes</a></li>
-                            <li><a href="./shop.html">Shop</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </header>
+    <!-- navigation bar -->
+    <header class="navigation">
+        <nav class="nav_flex container">
+            <p class="logo">
+                <span style="--i:1">Kingston</span>
+                <span style="--i:2">boxing</span>
+               <span style="--i:3">club</span>
+            </p>
+            <div class="nav_right_section">
+                <ul>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="training.html">Training</a></li>
+                    <li><a href="./classes.html">Classes</a></li>
+                    <li><a href="./shop.html">Shop</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+            <!-- video section -->
 
     <section class="video_box">
         <h2>Train with us</h2>
@@ -37,7 +39,7 @@
             <i class="fa-solid fa-arrow-down fa-lg" style="color: #EEA47F;"></i> This is how we train! <i class="fa-solid fa-arrow-down fa-lg" style="color: #EEA47F;"></i>
         </p>
 
-        <iframe class="youtube_video" width="560" height="315" src="https://www.youtube.com/embed/uthi-nQSAow?si=1AMjR4rsGoM07Ja6&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="youtube_video" src="https://www.youtube.com/embed/uthi-nQSAow?si=1AMjR4rsGoM07Ja6&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
             <!-- footer -->
