--- a/index.html
+++ b/index.html
@@ -32,30 +32,28 @@
     </header>
 
     <!-- about section -->
-<section class="about container row">
-<!-- <div class="container"> -->
-            <img class="img_about" src="./images/male_boxing.jpg" alt="picture of boxer">
-            <div class="about_box">
-                <h2>
-                    About Us
-                </h2>
-                <p class="about_text">Welcome to <span class="club_name">kingston Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
-                    and well-being through the art of boxing.
-                    Established in 2010, <span class="club_name">kingston Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
-                    Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
-                </p>
+<section class="about container">
+    <img class="img_about" src="./images/male_boxing.jpg" alt="picture of boxer">
+        <div class="about_box">
+            <h2>
+                About Us
+            </h2>
+            <p class="about_text">Welcome to <span class="club_name">kingston Boxing Club</span>, your local community-based amateur sports club dedicated to promoting fitness 
+                and well-being through the art of boxing.
+                Established in 2010, <span class="club_name">kingston Boxing Club</span> proudly holds affiliation with the esteemed England Boxing organization. 
+                Our primary mission is to foster a secure and nurturing atmosphere for the development and coaching of Olympic-style boxing techniques.
+            </p>
     
-                <div class="about_socials">
-                    <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a>
-                    <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
-                    <a href="#"><i class="fa-brands fa-youtube fa-2xl"></i></a>
-                </div>
+            <div class="about_socials">
+                <a href="#"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook fa-2xl"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube fa-2xl"></i></a>
             </div>
-<!-- </div> -->
+        </div>
 </section>
 
 <!-- training section -->
-<section class="training container row">
+<section class="training container">
     <div class="training_box">
         <h2>Training with us</h2>
             <p>At the heart of our training program is a dedicated and  tightly-knit team of highly qualified coaches. Each session is carefully 
@@ -78,7 +76,7 @@
 
 <!-- classes section -->
 
-<section class="classes_main container row">
+<section class="classes_main container">
     <img class="classes_main--img" src="./images/johann-walter-bantz-Clv9DfJLwac-unsplash.jpg">
         <div class="classes_main--text">
             <h2>Classes</h2>
@@ -87,8 +85,7 @@
             <div class="follow_links">            
                 <a href="./classes.html" class="link">See our schedule here <i class="fa-solid fa-arrow-right"></i></a>
             </div>
-        </div>
-        
+        </div>      
 </section>
 
 <!-- footer -->
@@ -118,6 +115,7 @@
                     </div>
                 </div>
             </div>
+        <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
 </div>
 </footer>
 </body>
