Final commit 4, copyright added

--- a/contact.html
+++ b/contact.html
@@ -82,6 +82,7 @@
                             </div>
                         </div>
                 </div>
+            <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
         </div>
     </footer>
 </body>
