--- a/classes.html
+++ b/classes.html
@@ -173,7 +173,8 @@
                             </div>
                         </div>
                     </div>
+                <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
         </div>
-        </footer>
+    </footer>
 </body>
 </html>
