--- a/shop.html
+++ b/shop.html
@@ -108,6 +108,7 @@
                                 </div>
                             </div>
                         </div>
+                    <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
             </div>
         </footer>
 </body>
