--- a/training.html
+++ b/training.html
@@ -68,6 +68,7 @@
                         </div>
                 </div>
             </div>
+        <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
     </div>
 </footer>
 </body>
