--- a/classes.html
+++ b/classes.html
@@ -169,11 +169,11 @@
                             </div>
                             <div>
                                 <h4>email</h4>
-                                <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+                                <a class="email" href="mailto: m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
                             </div>
                         </div>
                     </div>
-                <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
+                <p class="copyright">&copy;Martin Stavrakov</p>
         </div>
     </footer>
 </body>
