--- a/contact.html
+++ b/contact.html
@@ -78,12 +78,12 @@
                             </div>
                             <div>
                                 <h4>email</h4>
-                                <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+                                <a class="email" href="mailto: m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
                             </div>
                         </div>
                 </div>
-            <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
-        </div>
+                    <p class="copyright">&copy;Martin Stavrakov</p>        
+                </div>
     </footer>
 </body>
 </html>
