--- a/training.html
+++ b/training.html
@@ -36,7 +36,7 @@
         <h2>Train with us</h2>
 
         <p class="video_box--text">
-            <i class="fa-solid fa-arrow-down fa-lg" style="color: #EEA47F;"></i> This is how we train! <i class="fa-solid fa-arrow-down fa-lg" style="color: #EEA47F;"></i>
+            <i class="fa-solid fa-arrow-down fa-lg arrow"></i> This is how we train! <i class="fa-solid fa-arrow-down fa-lg arrow"></i>
         </p>
 
         <iframe class="youtube_video" src="https://www.youtube.com/embed/uthi-nQSAow?si=1AMjR4rsGoM07Ja6&amp;start=2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -64,12 +64,12 @@
                         </div>
                         <div>
                             <h4>email</h4>
-                                <a class="email" href="m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
+                                <a class="email" href="mailto: m.stavrakov@gmail.com">m.stavrakov@gmail.com</a>
                         </div>
                 </div>
             </div>
-        <p style="font-style: italic; font-size: .8rem;">&copy;Martin Stavrakov</p>
-    </div>
+                <p class="copyright">&copy;Martin Stavrakov</p>    
+            </div>
 </footer>
 </body>
 </html>
